--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title> Tae Kwon Do !</title> 
     </head>
-    <body>                
+    <body background="wall.png">                
         <br>
         <h1> TAE KWON DO ! ! -> </h1> 
         O CAMINHO DOS PÉS E DAS MÃOS ATRAVÉS DA MENTE
